--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto text-center">
+    <div class="collapse navbar-collapse justify-content-between align-items-center w-100" id="collapsingNavbar">
+        <ul class="navbar-nav mx-auto text-md-center text-left ">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item my-auto">
+                <a class="nav-link navbar-brand mx-0 d-none d-md inline" href="#">Siri Sipilä</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
