--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>Siri Sipilä portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
-
-    <div class="collapse navbar-collapse justify-content-between align-items-center w-100" id="collapsingNavbar">
-        <ul class="navbar-nav mx-auto text-md-center text-left ">
+    <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-md-center justify-content-start">
+    <a class="navbar-brand d-md-none d-inline" href="">Siri Sipilä</a>
+    <a class="nav-link" href="#_">
+    <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
+        <ul class="navbar-nav mx-auto text-md-center text-left">
             <li class="nav-item active">
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
