--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
     <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
         <ul class="navbar-nav mx-auto text-md-center text-left">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item my-auto">
-                <a class="nav-link navbar-brand mx-0 d-none d-md inline" href="#">Siri Sipilä</a>
+                <a class="nav-link navbar-brand mx-0 d-none d-md inline" href="">Siri Sipilä</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
