--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-md-center justify-content-start">
-    <a class="navbar-brand d-md-none d-inline" href="">Siri Sipilä</a>
+    <a class="navbar-brand d-md-none d-inline" href="">Brand</a>
     <a class="nav-link" href="#_">
     <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
         <ul class="navbar-nav mx-auto text-md-center text-left">
-            <li class="nav-item active">
+            <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
