--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>Siri Sipilä portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-light justify-content-md-center justify-content-start">
+<nav class="navbar navbar-expand-md bg-light justify-content-md-center justify-content-start">
     <a class="navbar-brand d-md-none d-inline" href="">Brand</a>
-    <a class="nav-link" href="#_">
+    <a class="nav-link" href="#_"><i class="fa fa-search mr-1"></i></a>
     <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
         <ul class="navbar-nav mx-auto text-md-center text-left">
             <li class="nav-item">
@@ -20,7 +20,7 @@
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item my-auto">
-                <a class="nav-link navbar-brand mx-0 d-none d-md inline" href="">Siri Sipilä</a>
+                <a class="nav-link navbar-brand mx-0 d-none d-md inline" href="">Brand</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
