--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
 <nav class="navbar navbar-expand-md bg-light justify-content-md-center justify-content-start">
     <a class="navbar-brand d-md-none d-inline" href="">Brand</a>
+    <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
+        <span class="navbar-toggler-icon"></span>
+    </button>
     <a class="nav-link" href="#_"><i class="fa fa-search mr-1"></i></a>
     <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
         <ul class="navbar-nav mx-auto text-md-center text-left">
