--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
             </li>
+        <ul class="nav navbar-nav flex-row justify-content-md-center justify-content-start flex-nowrap">
+            <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-facebook mr-1"></i></a> </li>
+            <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-twitter"></i></a> </li>
+        </ul>
 </body>
 </html>
