--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav class="navbar navbar-light navbar-expand-md bg-light justify-content-md-center justify-content-start">
-        <a class="navbar-brand d-md-none d-inline" href="">Brand</a>
+        <a class="navbar-brand d-md-none d-inline" href="">Siri Sipilä</a>
         <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -23,7 +23,7 @@
                     <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item my-auto">
-                    <a class="nav-link navbar-brand mx-0 d-none d-md-inline" href="">Brand</a>
+                    <a class="nav-link navbar-brand mx-0 d-none d-md-inline" href="">Siri Sipilä</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a> 
