--- a/index.html
+++ b/index.html
@@ -8,35 +8,40 @@
     <title>Siri Sipilä portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-light navbar-expand-md bg-light justify-content-md-center justify-content-start">
-        <a class="navbar-brand d-md-none d-inline" href="">Siri Sipilä</a>
-        <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#collapsingNavbar2">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <a class="nav-link" href="#_"><i class="fa fa-search mr-1"></i></a> 
-        <div class="navbar-collapse collapse justify-content-between align-items-center w-100" id="collapsingNavbar2">
-            <ul class="navbar-nav mx-auto text-md-center text-left">
+    <nav class="navbar navbar-light navbar-expand-lg bg-light">
+        <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
+            <ul class="navbar-nav mx-auto text-center">
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a> 
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
-                <li class="nav-item my-auto">
-                    <a class="nav-link navbar-brand mx-0 d-none d-md-inline" href="">Siri Sipilä</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a> 
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a> 
-                </li>
-            </ul>
-            <ul class="nav navbar-nav flex-row justify-content-md-center justify-content-start flex-nowrap">
-                <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-facebook mr-1"></i></a> </li>
-                <li class="nav-item"><a class="nav-link" href=""><i class="fa fa-twitter"></i></a> </li>
             </ul>
         </div>
+        <div class="mx-auto my-2 order-0 order-md-1 position-relative">
+            <a class="mx-auto" href="#">
+                <img src="../portfolio/img/logo.png" class="rounded-circle">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
+            <ul class="navbar-nav mr-auto text-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+            </li>
+            <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+            </li>
+        </ul>
     </nav>
 </body>
 </html>
