--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
     <title>Siri Sipilä portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
-            <ul class="navbar-nav mx-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a> 
+            <ul class="navbar-nav ml-auto text-center">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a> 
+                    <a class="nav-link" href="#">Link</a>
                 </li>
             </ul>
         </div>
         <div class="mx-auto my-2 order-0 order-md-1 position-relative">
             <a class="mx-auto" href="#">
-                <img src="../portfolio/img/logo.png" class="rounded-circle">
+                <img src="/img/logo.png" class="rounded-circle">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                 <span class="navbar-toggler-icon"></span>
@@ -37,11 +37,12 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item">
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="#">Link</a>
-            </li>
-        </ul>
+                </li>
+            </ul>
+        </div>
     </nav>
 </body>
 </html>
