--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
             <ul class="navbar-nav ml-auto text-center">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">About me</a>
                 </li>
                 <li class="nav-item">
