--- a/contactme.html
+++ b/contactme.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
             <ul class="navbar-nav ml-auto text-center">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">About me</a>
                 </li>
                 <li class="nav-item">
@@ -38,5 +38,14 @@
             </ul>
         </div>
     </nav>
+    <div class="contactText">
+        <h4>Contact me</h4>
+        <p>Siri Sipilä<br>Esimerkkikuja 4<br>00100 Helsinki<br><br>+358 44 123 4567<br>siri.sipila@student.laurea.fi</p>
+    </div>
+    <div class="contactImage">
+        <img src="img/nappis_2-1.jpg" style="height: 600px;">
+    </div>
+    <div class="contactBlock">
+    </div>
 </body>
 </html>
