--- a/photography.html
+++ b/photography.html
@@ -11,7 +11,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
             <ul class="navbar-nav ml-auto text-center">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">About me</a>
                 </li>
                 <li class="nav-item">
@@ -38,6 +38,14 @@
             </ul>
         </div>
     </nav>
+        <h2 class="photo_h2">Photography is an art of teleporting the past into the future</h2>
+        <p class="photo_p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation<br> ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+        cillum dolore eu fugiat nulla pariatur. Lorem ipsum dolor sit amet, <br>consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea <br>commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse 
+        cillum dolore eu fugiat nulla pariatur.</p>
     <div class="row">
         <div class="column">
             <img src="img/haa_pysty2.jpg" style="height:300px">
