--- a/photography.html
+++ b/photography.html
@@ -12,9 +12,6 @@
         <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
             <ul class="navbar-nav ml-auto text-center">
                 <li class="nav-item">
-                    <a class="nav-link" href="aboutme.html">About me</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="photography.html">Photography</a>
                 </li>
             </ul>
@@ -23,15 +20,18 @@
             <a class="mx-auto" href="home.html">
                 <img src="../portfolio/img/logo2.png" class="rounded-circle">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <div class="dropdown">
+                <button class="dropdown-button">
+                    <img src="img/clipart365828.png" alt="dd" width="35" height="35">
+                </button>
+                    <div class="dropdown-content">
+                        <a href="photography.html">Photography</a>
+                        <a href="contactme.html">Contact me</a>
+                    </div>
+            </div>
         </div>
         <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
             <ul class="navbar-nav mr-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="hairdressing.html">Hairdressing</a>
-                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contactme.html">Contact me</a>
                 </li>
