--- a/contactme.html
+++ b/contactme.html
@@ -8,44 +8,43 @@
     <title>Siri Sipilä portfolio</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
-            <ul class="navbar-nav ml-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="photography.html">Photography</a>
-                </li>
-            </ul>
-        </div>
-        <div class="mx-auto my-2 order-0 order-md-1 position-relative">
-            <a class="mx-auto" href="home.html">
-                <img src="../portfolio/img/logo2.png" class="rounded-circle">
-            </a>
-            <div class="navbar-toggler">
-                <div class="navbar-toggler-icon">
-                    <img src="img/dropdown.png" alt="dd" width="35" height="35">
-                    <div class="dropdown-content">
-                        <a href="photography.html">Photography</a>
-                        <a href="contactme.html">Contact me</a>
-                    </div>
-                </div>
+    <!DOCTYPE html>
+    <html>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <link rel="stylesheet" href="styles.css">
+        <title>Siri Sipilä portfolio</title>
+    </head>
+    <body>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
+                <ul class="navbar-nav ml-auto text-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="photography.html">Photography</a>
+                    </li>
+                </ul>
             </div>
-        </div>
-        <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
-            <ul class="navbar-nav mr-auto text-center">
-                <li class="nav-item">
-                    <a class="nav-link" href="contactme.html">Contact me</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <div class="contactText">
-        <h4>Contact me</h4>
-        <p>Siri Sipilä<br>Esimerkkikuja 4<br>00100 Helsinki<br><br>+358 44 123 4567<br>siri.sipila@student.laurea.fi</p>
-    </div>
-    <div class="contactImage">
-        <img src="img/nappis_2-1.jpg" style="height: 650px;">
-    </div>
-    <div class="contactBlock">
-    </div>
+            <div class="mx-auto my-2 order-0 order-md-1 position-relative">
+                <a class="mx-auto" href="home.html">
+                    <img src="../portfolio/img/logo2.png" class="rounded-circle">
+                </a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
+                <ul class="navbar-nav mr-auto text-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="contactme.html">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+ 
+ 
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
 </body>
 </html>
