--- a/photography.html
+++ b/photography.html
@@ -42,7 +42,39 @@
                 </ul>
             </div>
         </nav>
- 
+    <div class="images">
+        <div class="row">
+            <div class="column">
+                <img src="img/haa_pysty2.jpg" style="height:300px">
+            </div>
+            <div class="column">
+                <img src="img/malli_pysty1.jpg" style="height:300px">
+            </div>
+            <div class="column">
+                <img src="img/malli_pysty6.jpg" style="height:300px">
+            </div>
+            <div class="column">
+                <img src="img/haa_pysty3.jpg" style="height:300px">
+            </div>
+            <div class="column">
+                <img src="img/malli_pysty3.jpg" style="height:300px">
+            </div>
+            <div class="column">
+                <img src="img/malli_pysty4.jpg" style="height:300px">
+            </div>
+        </div>
+        <div class="rowVaaka">
+            <div class="columnVaaka">
+                <img src="img/hevoset_vaaka1.jpg" style="height:270px">
+            </div>
+            <div class="columnVaaka">
+                <img src="img/haa_vaaka1.jpg" style="height:270px">
+            </div>
+            <div class="columnVaaka">
+                <img src="img/malli_vaaka1.jpg" style="height:270px">
+            </div>
+        </div>
+    </div>
  
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
