--- a/contactme.html
+++ b/contactme.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <title>Siri Sipilä portfolio</title>
-</head>
-<body>
-    <!DOCTYPE html>
     <html>
     <head>
         <meta charset="UTF-8">
@@ -42,7 +32,15 @@
                 </ul>
             </div>
         </nav>
- 
+        <div class="contact">
+            <img src="img/nappis_2-1.jpg" alt="keyboard" class="contactImage">
+            <div class="contactText">
+                <h4>Contact me</h4>
+                <p>Siri Sipilä<br>Esimerkkikuja 4<br>00100 Helsinki<br><br>+358 44 123 4567<br>siri.sipila@student.laurea.fi</p>
+            </div>
+        </div>
+        <div class="contactBlock">
+        </div>
  
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
