--- a/home.html
+++ b/home.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
         <title>Siri Sipilä portfolio</title>
     </head>
@@ -31,7 +32,11 @@
                     </li>
                 </ul>
             </div>
+            <a href="https://www.facebook.com/" class="nav-link nav-item"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" class="nav-link nav-item"><i class="fa fa-instagram"></i></a>
+            <a href="https://twitter.com/" class="nav-link nav-item"><i class="fa fa-twitter"></i></a>
         </nav>
+    <div class="main">
         <h2 class="home_h2">Tervetuloa portfoliooni!</h2>
         <p class="home_p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
             ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
@@ -43,8 +48,11 @@
             esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
             officia deserunt mollit anim id est laborum</p>
         
- 
+        <div class="footer">
+            <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
+        </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    </div>
 </body>
 </html>
