--- a/photography.html
+++ b/photography.html
@@ -32,51 +32,76 @@
                 </ul>
             </div>
         </nav>
+    <div class="main">
     <h2 class="photo_h2">Photography is an art of teleporting the past into the future</h2>
     <p class="photo_p1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
         ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
         ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum 
         dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
-        deserunt mollit anim id est laborum. <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
+        deserunt mollit anim id est laborum. <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
         laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
         esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
-        officia deserunt mollit anim id est laborum</p>
+        officia deserunt mollit anim id est laborum. <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
+        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+        officia deserunt mollit anim id est laborum. <br><br> Lorem ipsum dolor sit amet, consectetur adipiscing elit
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
+        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+        officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
+        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit 
+        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
+        officia deserunt mollit anim id est laborum</p> 
     <div class="images">
         <div class="row">
             <div class="column">
-                <img src="img/haa_pysty2.jpg" style="height:300px">
+                <img src="img/haa_pysty2.jpg" style="height:338px">
             </div>
             <div class="column">
-                <img src="img/malli_pysty1.jpg" style="height:300px">
+                <img src="img/malli_pysty1.jpg" style="height:338px">
             </div>
             <div class="column">
-                <img src="img/malli_pysty6.jpg" style="height:300px">
+                <img src="img/malli_pysty6.jpg" style="height:338px">
             </div>
             <div class="column">
-                <img src="img/haa_pysty3.jpg" style="height:300px">
+                <img src="img/haa_pysty3.jpg" style="height:338px">
             </div>
             <div class="column">
-                <img src="img/malli_pysty3.jpg" style="height:300px">
+                <img src="img/malli_pysty3.jpg" style="height:338px">
             </div>
             <div class="column">
-                <img src="img/malli_pysty4.jpg" style="height:300px">
+                <img src="img/malli_pysty4.jpg" style="height:338px">
+            </div>
+            <div class="column">
+                <img src="img/haa_pysty1.jpg" style="height: 338px;">
+            </div>
+            <div class="column">
+                <img src="img/malli_pysty2.jpg" style="height: 338px;">
             </div>
         </div>
         <div class="rowVaaka">
             <div class="columnVaaka">
-                <img src="img/hevoset_vaaka1.jpg" style="height:270px">
+                <img class="horsepic" src="img/hevoset_vaaka1.jpg" style="height:305px">
             </div>
             <div class="columnVaaka">
-                <img src="img/haa_vaaka1.jpg" style="height:270px">
+                <img src="img/haa_vaaka1.jpg" style="height:305px">
             </div>
             <div class="columnVaaka">
-                <img src="img/malli_vaaka1.jpg" style="height:270px">
+                <img src="img/malli_vaaka1.jpg" style="height:305px">
+            </div>
+            <div class="columnVaaka">
+                <img src="img/alppiruusutiia24.jpg" style="height: 305px;">
             </div>
         </div>
     </div>
- 
+    <div class="footer">
+        <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    </div>
 </body>
 </html>
