--- a/contactme.html
+++ b/contactme.html
@@ -32,20 +32,15 @@
                 </ul>
             </div>
         </nav>
+        <div class="main">
         <div class="contact">
-            <img src="img/nappis_2-1.jpg" alt="keyboard" class="contactImage">
-            <div class="contactText">
-                <h4>Contact me</h4>
-                <p>Siri Sipilä<br>Esimerkkikuja 4<br>00100 Helsinki<br><br>+358 44 123 4567<br>siri.sipila@student.laurea.fi</p>
-            </div>
-        </div>
-        <div class="contactBlock">
+            <img src="img/contactme_info.png" alt="keyboard" class="contactImage">
         </div>
         <div class="footer">
-            <p>Footer</p>
+            <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
         </div>
- 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+        </div>
 </body>
 </html>
