--- a/contactme.html
+++ b/contactme.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="styles.css">
         <title>Siri Sipilä portfolio</title>
     </head>
@@ -31,6 +32,9 @@
                     </li>
                 </ul>
             </div>
+            <a href="https://www.facebook.com/" class="nav-link nav-item"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/" class="nav-link nav-item"><i class="fa fa-instagram"></i></a>
+            <a href="https://twitter.com/" class="nav-link nav-item"><i class="fa fa-twitter"></i></a>
         </nav>
         <div class="main">
         <div class="contact">
