--- a/contactme.html
+++ b/contactme.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="styles.css">
         <title>Siri Sipilä portfolio</title>
     </head>
@@ -13,7 +14,7 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="photography.html">Photography</a>
+                        <a class="nav-link" href="photography.html">Valokuvaus</a>
                     </li>
                 </ul>
             </div>
@@ -28,7 +29,7 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
                 <ul class="navbar-nav mr-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="contactme.html">Contact me</a>
+                        <a class="nav-link" href="contactme.html">Yhteystiedot</a>
                     </li>
                 </ul>
             </div>
@@ -38,7 +39,13 @@
         </nav>
         <div class="main">
         <div class="contact">
-            <img src="img/contactme_info.png" alt="keyboard" class="contactImage">
+        <div class="contactBox"><br><br>
+        <i class="bi-geo-alt"></i>
+        <i class="bi-telephone"></i>
+        <i class="bi-envelope"></i>
+            <h2 class="contact_h2">Ota yhteyttä</h2>
+            <p class="contact_p1">Siri Sipilä<br>Esimerkkikuja 4<br>00100 Helsinki<br><br>+358 44 123 4567<br>siri.sipila@student.laurea.fi</p>
+            </div>
         </div>
         <div class="footer">
             <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
