--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="photography.html">Photography</a>
+                        <a class="nav-link" href="photography.html">Valokuvaus</a>
                     </li>
                 </ul>
             </div>
@@ -28,7 +28,7 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
                 <ul class="navbar-nav mr-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="contactme.html">Contact me</a>
+                        <a class="nav-link" href="contactme.html">Yhteystiedot</a>
                     </li>
                 </ul>
             </div>
