--- a/contactme.html
+++ b/contactme.html
@@ -40,7 +40,7 @@
         </nav>
         <div class="main">
         <div class="contact">
-        <div class="contactBox"><br><br>
+        <div class="contactBox">
         <i class="bi-geo-alt"></i>
         <i class="bi-telephone"></i>
         <i class="bi-envelope"></i>
