--- a/home.html
+++ b/home.html
@@ -32,9 +32,9 @@
                     </li>
                 </ul>
             </div>
-            <a href="https://www.facebook.com/" class="nav-link nav-item"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.instagram.com/" class="nav-link nav-item"><i class="fa fa-instagram"></i></a>
-            <a href="https://twitter.com/" class="nav-link nav-item"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
         </nav>
     <div class="main">
         <h2 class="home_h2">Tervetuloa portfoliooni!</h2>
