--- a/contactme.html
+++ b/contactme.html
@@ -32,7 +32,6 @@
                         <a class="nav-link" href="contactme.html">Yhteystiedot</a>
                     </li>
                 </ul>
-            </div>
             <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
             <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
             <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
@@ -40,13 +39,19 @@
         </nav>
         <div class="main">
         <div class="contact">
-        <div class="contactBox">
-        <i class="bi-geo-alt"></i>
-        <i class="bi-telephone"></i>
-        <i class="bi-envelope"></i>
+        <div class="contactBox"><br><br>
             <h2 class="contact_h2">Ota yhteyttä</h2>
-            <p class="contact_p1">Siri Sipilä<br>Esimerkkikuja 4<br>00100 Helsinki<br><br>+358 44 123 4567<br>siri.sipila@student.laurea.fi</p>
+            <div class="contact_icons">
+                <i class="bi-geo-alt fa-2x"></i>
+                <i class="bi-telephone fa-2x"></i>
+                <i class="bi-envelope fa-2x"></i>
             </div>
+            <div class="contact_texts">
+                <p class="contact_p1">Esimerkkikuja 4<br>00100 Helsinki</p>
+                <p class="contact_p2">+358 44 123 4567<br></p>
+                <p class="contact_p3">siri.sipila@student.laurea.fi</p>
+            </div>
+        </div>
         </div>
         <div class="footer">
             <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
