--- a/photography.html
+++ b/photography.html
@@ -31,10 +31,12 @@
                         <a class="nav-link" href="contactme.html">Yhteystiedot</a>
                     </li>
                 </ul>
+                <div class="sm_icons">
+                    <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+                </div>
             </div>
-            <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
-            <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
         </nav>
     <div class="main">
     <h2 class="photo_h2">Photography is an art of teleporting the past into the future</h2>
