--- a/home.html
+++ b/home.html
@@ -31,9 +31,11 @@
                         <a class="nav-link" href="contactme.html">Yhteystiedot</a>
                     </li>
                 </ul>
-            <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
-            <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+                <div class="sm_icons">
+                    <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+                    <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+                </div>
             </div>
         </nav>
     <div class="main">
