--- a/contactme.html
+++ b/contactme.html
@@ -39,27 +39,35 @@
                 </div>
             </div>
         </nav>
-        <div class="main">
-        <div class="contact">
+    <div class="main">
         <div class="contactBox"><br><br>
             <h2 class="contact_h2">Ota yhteyttä</h2>
-            <div class="contact_icons">
-                <i class="bi-geo-alt fa-2x"></i>
-                <i class="bi-telephone fa-2x"></i>
-                <i class="bi-envelope fa-2x"></i>
-            </div>
-            <div class="contact_texts">
-                <p class="contact_p1">Esimerkkikuja 4<br>00100 Helsinki</p>
-                <p class="contact_p2">+358 44 123 4567<br></p>
-                <p class="contact_p3">siri.sipila@student.laurea.fi</p>
-            </div>
+            <div class="row">
+                <div class="col"></div>
+                <div class="col-md 2 justify-content-center text-center">
+                  <div class="bi-geo-alt fa-2x text-center"></div>
+                  <br>
+                  <p class="contact_p text-center">Esimerkkikuja 4<br>00100 Helsinki</p>
+                </div>
+                <div class="col-md 2 justify-content-center text-center">
+                  <div class="bi-telephone fa-2x text-center"></div>
+                  <br>
+                  <p class="contact_p text-center">+358 44 123 4567</p>
+                </div>
+                  <div class="col-md 2 justify-content-center text-center">
+                    <div class="bi-envelope fa-2x text-center"></div>
+                    <br>
+                    <p class="contact_p text-center">siri.sipila@student.laurea.fi</p>
+                  </div>
+                <div class="col"></div>
+              </div>
         </div>
-        </div>
+    </div>
         <div class="footer">
             <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-        </div>
+    </div>
 </body>
 </html>
