--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html>
+    <html lang="zxx">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,7 +19,7 @@
             </div>
             <div class="mx-auto my-2 order-0 order-md-1 position-relative">
                 <a class="mx-auto" href="index.html">
-                    <img src="../portfolio/img/logo2.png" class="rounded-circle">
+                    <img src="../portfolio/img/logo2.png" alt="logo" class="rounded-circle">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
@@ -63,7 +63,7 @@
             officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui 
             officia deserunt mollit anim id est laborum. Ut enim ad minim veniam, quis nostrud exercitation ullamco. Lorem ipsum 
             dolor sit amet,consectetur adipiscing elit, sed do eiusmod</p>
-        <img class="contactImage" src="img/contactme_pic.jpg" style="width: 1650px;">
+        <img class="contactImage" src="img/contactme_pic.jpg" alt="contactimage" style="width: 1650px;">
         </div>
         <div class="footer">
             <p>©2021 Siri Sipilä, Inc. All Rights Reserved</p>
