--- a/photography.html
+++ b/photography.html
@@ -13,20 +13,22 @@
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-1 order-md-0">
                 <ul class="navbar-nav ml-auto text-center">
                     <li class="nav-item">
-                        <a class="nav-link" href="photography.html">Valokuvaus</a>
+                        <a class="nav-link" href="index.html">Aloitus</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="photographer.html">Valokuvaaja</a>
                     </li>
                 </ul>
             </div>
-            <div class="mx-auto my-2 order-0 order-md-1 position-relative">
-                <a class="mx-auto" href="index.html">
-                    <img src="../portfolio/img/logo2.png" alt="logo" class="rounded-circle">
-                </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
             <div class="navbar-collapse collapse w-100 dual-collapse2 order-2 order-md-2">
                 <ul class="navbar-nav mr-auto text-center">
+                    <li class="nav-item">
+                        <a class="nav-link" href="photography.html">Kuvat</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contactme.html">Yhteystiedot</a>
                     </li>
